--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,10 +4,16 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-    imagenes_directory: '%kernel.project_dir%/public/uploads/images'
+    upload_directory: '%kernel.project_dir%/public/uploads'
+
 services:
+    App\Service\FileUploader:
+        arguments:
+            $targetDirectory: '%upload_directory%'
+            $slugger: '@slugger.interface'
     App\Command\InsertSubcategoriesCommand:
         tags: ['console.command']
+
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
