--- a/config/services.yaml
+++ b/config/services.yaml
@@ -14,6 +14,12 @@ services:
     App\Command\InsertSubcategoriesCommand:
         tags: ['console.command']
 
+    App\DataFixtures\CategoryFixtures:
+        tags: ['doctrine.fixture.orm', 'doctrine.fixture.group.CategoryFixtures']
+
+    App\DataFixtures\SubcategoryFixtures:
+        tags: ['doctrine.fixture.orm', 'doctrine.fixture.group.SubcategoryFixtures']
+
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
