creacion del registro de actividades

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -4,3 +4,7 @@ controllers:
         namespace: App\Controller
     type: attribute
 
+get_subcategory:
+    path: /subcategory/get_subcategory/{id}
+    controller: App\Controller\SubcategoryController::getSubcategoriesByCategory
+
