--- a/.env
+++ b/.env
@@ -25,8 +25,8 @@ APP_SECRET=54b3a4ea26655c8dab9228c765b73499
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 
-#DATABASE_URL="mysql://personalactivity:Md5uhDWUjrmpq8mczfLT@127.0.0.1:3306/personal_activity?serverVersion=8.3.14&charset=utf8mb4"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/personalactivity?serverVersion=10.4.32-MariaDB&charset=utf8mb4"
+DATABASE_URL="mysql://personalactivity:Md5uhDWUjrmpq8mczfLT@127.0.0.1:3306/personal_activity?serverVersion=8.3.14&charset=utf8mb4"
+#DATABASE_URL="mysql://root:@127.0.0.1:3306/personalactivity?serverVersion=10.4.32-MariaDB&charset=utf8mb4"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
